syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.fireflies.proto";
option java_outer_classname = "FirefliesProto";
option objc_class_prefix = "Ap";
import "google/protobuf/any.proto";
import "util.proto";

package fireflies;

service Fireflies {
    /*
     * Fireflies 3 phase gossip
     */
    rpc gossip (SayWhat) returns (Gossip) {}
    rpc update (State) returns (Null) {}

    /**
     * Fireflies liveness ping
     */
    rpc ping (Null) returns (Null) {}
}

message Null {
    utils.Digeste context = 1;
}

message SayWhat {
    utils.Digeste context = 1;
    Note note = 2;
    int32 ring = 3;
    Digests gossip = 4;
}

message State {
    utils.Digeste context = 1;
    int32 ring = 2;
    Update update = 3;
}

message Accusation {
    int64 epoch = 1;
    int32 ringNumber = 2;
    utils.Digeste accuser = 3;
    utils.Digeste accused = 4;
    bytes content = 5;
    utils.Sig signature = 6;
}

message Note {
    int64 epoch = 1;
    utils.Digeste id = 2;
    bytes mask = 3;
    utils.Sig signature = 4;
}

message AccusationGossip {
    utils.Biff bff = 1;
    repeated Accusation updates = 2;
} 

message EncodedCertificate {
    utils.Digeste id = 1;
    int64 epoch = 2;
    utils.Digeste hash = 3;
    bytes content = 4; 
}

message CertificateGossip {
    utils.Biff bff = 1;
    repeated EncodedCertificate updates = 2;
}

message NoteGossip {
    utils.Biff bff = 1;
    repeated Note updates = 2;
}

message Digests { 
    utils.Biff certificateBff = 1;
    utils.Biff noteBff = 2;
    utils.Biff accusationBff = 3; 
}

message Gossip {
    bool redirect = 1; 
    CertificateGossip certificates = 2;
    NoteGossip notes = 3;
    AccusationGossip accusations = 4;
}

message Update {
    repeated EncodedCertificate certificates = 1;
    repeated Note notes = 2;
    repeated Accusation accusations = 3; 
}

