syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.fireflies.proto";
option java_outer_classname = "FirefliesProto";
option objc_class_prefix = "Ff";
import "google/protobuf/empty.proto";
import "util.proto";
import "stereotomy.proto";

package fireflies;

service Fireflies {
    rpc gossip (SayWhat) returns (Gossip) {}
    rpc update (State) returns (google.protobuf.Empty) {}
}

message SayWhat {
    utils.Digeste context = 1;
    SignedNote note = 2;
    int32 ring = 3;
    Digests gossip = 4;
}

message State {
    utils.Digeste context = 1;
    int32 ring = 2;
    Update update = 3;
}

message Accusation {
    int64 epoch = 1;
    int32 ringNumber = 2;
    utils.Digeste accuser = 3;
    utils.Digeste accused = 4;
}

message SignedAccusation {
    Accusation accusation = 1;
    utils.Sig signature = 2;
}

message Note {
    int64 epoch = 1;
    stereotomy.EventCoords coordinates = 2;
    bytes mask = 3;
    string host = 4;
    int32 port = 5;
}

message ViewChange {
    utils.Digeste observer = 1;
    utils.Digeste current = 2;
    repeated utils.Digeste joins = 3;
    bytes failed = 4;
}

message SignedViewChange {
    ViewChange change = 1;
    utils.Sig signature = 2;
}

message SignedNote {
    Note note = 1; 
    utils.Sig signature = 2;
}

message AccusationGossip {
    utils.Biff bff = 1;
    repeated SignedAccusation updates = 2;
}

message NoteGossip {
    utils.Biff bff = 1;
    repeated SignedNote updates = 2;
}

message ViewChangeGossip {
    utils.Biff bff = 1;
    repeated SignedViewChange updates = 2;
}

message Digests { 
    utils.Biff identityBff = 1;
    utils.Biff noteBff = 2;
    utils.Biff accusationBff = 3;
    utils.Biff observationsBff = 4;
}

message Gossip {
    bool redirect = 1;
    NoteGossip notes = 3;
    AccusationGossip accusations = 4;
    ViewChangeGossip observations = 5;
}

message Update {
    repeated SignedNote notes = 1;
    repeated SignedAccusation accusations = 2;
    repeated SignedViewChange observations = 3;
}
